--- a/Module2/Yoga-Studio-HTML-CSS/bootstrap-index_Exercise4.html
+++ b/Module2/Yoga-Studio-HTML-CSS/bootstrap-index_Exercise4.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>Quickstart Bootstrap Template</title>
+  <title>Bootstrap Exercise 4</title>
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -65,7 +65,16 @@
       <!-- Exercise 4 -->
       <!-- Testimonial -->
       <section class="row my-4">
-        <div>Testimonial</div>
+        <blockquote class="col col-12 testimonial-quote">
+          <q
+              >This has been the best yoga session I have ever experienced. During the exercises, I was
+              floating 4 yards above ground even though the room was only 3 yards tall.</q
+          >
+          - <em>Emerald Hill</em>
+        </blockquote>
+        <div class="col col-12">
+          <button class="btn btn-outline-dark">Read testimonials</button>
+        </div>
       </section>
 
       <section class="row  my-4g-4 g-sm-4 ">
