update bootstrap practice

--- a/ClassPractice_Bootstrap2/Bootstrap/2_Bootstrap_TwoTextClass /index.html
+++ b/ClassPractice_Bootstrap2/Bootstrap/2_Bootstrap_TwoTextClass /index.html
@@ -13,8 +13,8 @@
   <!-- Add second bootstrap class fst-italic -->
   <main>
     <h1>Main content</h1>
-    <p class="GreenBgColor TextClass">Left aligned text on all viewport sizes.</p>
-    <p class="text-center fst-italic">Left aligned text on all viewport sizes.</p>
+    <p class="GreenBgColor">Left aligned text on all viewport sizes.</p>
+    <p class="QuickstartText">Left aligned text on all viewport sizes.</p>
   </main>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
