--- a/ClassPractice_Bootstrap2/Bootstrap/5_Bootstrap_ContainerRow/index.html
+++ b/ClassPractice_Bootstrap2/Bootstrap/5_Bootstrap_ContainerRow/index.html
@@ -11,13 +11,17 @@
 
 <body>
   <!-- Add container fluid bootstrap class -->
-  <main class="container-fluid">
-    <h1>Main content</h1>
+  <main class="container">
     <section class="row">
       Row 1
-    </section>
+    </section><br>
+    
     <section class="row">
       Row 2
+    </section><br>
+
+    <section class="row">
+      Row 3
     </section>
   </main>
 
