--- a/ClassPractice_Bootstrap2/Bootstrap/6_Bootstrap_ContainerRow3ColumnWithP/index.html
+++ b/ClassPractice_Bootstrap2/Bootstrap/6_Bootstrap_ContainerRow3ColumnWithP/index.html
@@ -12,15 +12,14 @@
 <body>
   <!-- Add container fluid bootstrap class -->
   <main class="container-fluid">
-    <h1>Main content</h1>
     <section class="row">
       <h1>Row 1</h1>
     </section>
+
     <section class="row">
-      <h1>Row 2</h1>
-      <section class="col-3 green">Column 1</section>
-      <section class="col-6 red">Column 2</section>
-      <section class="col-3 green">Column 3</section>
+      <section class="col green"><p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa reprehenderit laborum iste quidem voluptatibus aspernatur numquam totam impedit veritatis. Illo ullam obcaecati blanditiis consequuntur aperiam dolorum sed consequatur odit quos.</p></section>
+      <section class="col red"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus laborum molestiae impedit quis, odio possimus facere. Expedita laudantium assumenda tempore voluptates voluptate ea, sint voluptatem sed consectetur odit quis mollitia?</p></section>
+      <section class="col green">Column 3</section>
     </section>
     
   </main>
