--- a/ClassPractice_Bootstrap2/Bootstrap/4_Bootstrap_Containerfluid/index.html
+++ b/ClassPractice_Bootstrap2/Bootstrap/4_Bootstrap_Containerfluid/index.html
@@ -11,10 +11,17 @@
 
 <body>
   <!-- Add container fluid bootstrap class -->
-  <main class="container-fluid">
-    <h1>Main content</h1>
-    
+  <main class="container-fluid greenbg">
+    <h1>Main content</h1>  
   </main>
+
+  <section class="container">
+    This is our class
+  </section>
+
+  <section class="container-fluid yellowbg">
+    Another section
+  </section>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
