Update bootstrap exercise

--- a/ClassPractice_Bootstrap2/CSS/4_onePragraphWithOnebgClass/index.html
+++ b/ClassPractice_Bootstrap2/CSS/4_onePragraphWithOnebgClass/index.html
@@ -12,8 +12,9 @@
 <body>
   <!-- Define a class for a paragraph -->
   <main>
-    <h1>Main content</h1>
+    <h1 class="GreenBgColor">Main content</h1>
     <p class="GreenBgColor">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem, minus laboriosam illo officia ipsam vitae rerum maxime neque perferendis fugit tempore numquam libero dolorem blanditiis eum, eos ad enim impedit, odit eveniet. Assumenda cupiditate nam facilis eligendi harum sint maxime omnis distinctio corporis repellendus. Similique explicabo id quas incidunt, inventore commodi saepe iste aliquam ex consectetur doloremque aut in itaque!</p>
+    <div class="GreenBgColor">This is a test</div>
   </main>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
