--- a/ClassPractice_Bootstrap2/CSS/2_main/index.html
+++ b/ClassPractice_Bootstrap2/CSS/2_main/index.html
@@ -13,6 +13,7 @@
   <!-- Adding main Tag to page -->
   <main>
     <h1>Main content</h1>  
+    <div>Test</div>
   </main>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
